package application.base.domain.meetingManagement;

public enum MeetingStatus {
    /**
     * Indicates that the meeting invitation is created
     */
    CREATED,

    /**
     * Indicates that the meeting invitation is canceled
     */
    CANCELED;
}
